[package]
name = "aqueryon"
version = "0.1.0"
authors = ["sifyfy <sifyfy@sifyfy.dev>"]
edition = "2018"
license = "MIT OR Apache-2.0"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.25"
async-trait = "0.1.21"
derive_more = "0.99.2"
diesel = { version = "1.0", optional = true }
mysql_async = "0.21.1"
rust_decimal = "1.1.0"
serde = { version = "1", optional = true }
thiserror = "1.0.9"
tokio = "0.2.6"

[dev-dependencies]
tokio = { version = "0.2.6", features = ["full"] }
