[package]
name = "aqueryon"
version = "0.0.0"
authors = ["sifyfy <sifyfy@sifyfy.dev>"]
edition = "2018"
license = "MIT OR Apache-2.0"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["sqlx", "sqlx/runtime-tokio-rustls"]

[dependencies]
anyhow = "1.0"
derive_more = "0.99.2"
sqlx = { version = "0.5.7", optional = true }
thiserror = "1.0.9"
